# opensidewalks-nyc

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  LICENSE-DATA.md  METHODOLOGY.md  NOTICE  README.md  SCHEMA.md  pyproject.toml
config/: build.yaml  sources.yaml
data/: README.md
notebooks/: build.ipynb
pipeline/: __init__.py  __main__.py
pipeline/sources/: build_address_index.py  fetch_open_data.py
pipeline/stages/: __init__.py  acquire.py  assemble.py  clean.py  export.py  schema_map.py  validate.py
pipeline/utils/: __init__.py  export_binary.py  ids.py  provenance.py
scripts/: README.md  osw_to_unweaver.py  restore_artifact.py  route_test.py  snap_endpoints.py  split_by_borough.py  to_flatgeobuf.py  to_graphml.py
unweaver-project/: profile-distance.json  profile-wheelchair.json
validators/: QUALITY_REPORT.md  UNWEAVER_RESEARCH.md  quality_audit.py  route_test_results.json  route_test_results.md
